--- a/src/style/core/_mixins.scss
+++ b/src/style/core/_mixins.scss
@@ -61,7 +61,7 @@
   $addSize: $pcSize - $mobSize;//разница в размере
   $maxWidth: $maxWidth - 320;//разница в контейнерах
   font-size: $pcSize + px;//размер на десктопе
-  @media (max-width: $maxWidth + px) {
+  @media (max-width: 1810px) {
     //мобильный шрифт - 16px
     //десктопный шрифт - 32px
     //контейнер - 1200px
