--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,19 +1,19 @@
 // core
+//@import 'core/fonts';
 @import 'core/variables';
 @import 'core/mixins';
 @import 'core/base';
 
 //elements
+@import 'elements/slickBase';
+@import 'elements/language';
 //@import 'elements/breadcrumbs';
 //@import 'elements/burger';
 //@import 'elements/pagination';
 //@import 'elements/popup';
-//@import 'elements/slickBase';
-// @import 'elements/stickyHeader';
 
 //section
 @import 'sections/header';
-@import 'sections/footer';
 
 //pages
 @import 'pages/index';
