--- a/src/style/sections/_header.scss
+++ b/src/style/sections/_header.scss
@@ -1,15 +1,18 @@
 .header {
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
   .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 86px;
-    padding-bottom: 33px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 
-    @include max(1200) {
-      padding-top: 25px;
-    }
-    @include max(400) {
+    @include max(425) {
       flex-wrap: wrap;
     }
   }
@@ -19,7 +22,7 @@
 .header__logo {
   margin-right: 20px;
 
-  @include max(400) {
+  @include max(425) {
     width: 100%;
     margin-right: 0;
     margin-bottom: 20px;
@@ -27,15 +30,12 @@
   img {
     display: block;
     width: 100%;
-    max-width: 408px;
+    max-width: 300px;
 
-    @include max(900) {
-      max-width: 300px;
-    }
     @include max(640) {
       max-width: 250px;
     }
-    @include max(400) {
+    @include max(425) {
       margin: 0 auto;
     }
   }
@@ -45,7 +45,7 @@
 
 //begin #MENU
 .header-menu {
-  @include max(1600) {
+  @include max(1240) {
     position: fixed;
     z-index: 100;
     top: 0;
@@ -58,12 +58,10 @@
     height: 100vh;
     transition: .5s ease-in-out;
     transform: translateY(-110vh);
-    pointer-events: none;
     background-color: #000;
   }
   &.active {
     transform: translateY(0);
-    pointer-events: auto;
   }
 }
 
@@ -74,7 +72,7 @@
   margin-bottom: 50px;
   cursor: pointer;
 
-  @include max(1600) {
+  @include max(1240) {
     display: block;
   }
   &:hover {
@@ -96,7 +94,7 @@
   margin: 0;
   padding: 0;
 
-  @include max(1600) {
+  @include max(1240) {
     flex-direction: column;
   }
 }
@@ -105,118 +103,57 @@
   padding: 0 20px;
   list-style: none;
 
-  @include max(1600) {
+  @include max(1240) {
     padding: 10px 0;
   }
 }
 
 .header-menu__link {
-  font-size: 26px;
+  font-size: 18px;
   font-weight: 500;
   transition: .5s;
   white-space: nowrap;
   text-decoration: none;
   color: #fff;
+
+  @include max(1240) {
+    font-size: 24px;
+  }
   &.active,
-  &.active {
+  &:hover {
     color: $highlight;
+  }
+}
+
+.header-menu__btn {
+  display: none;
+  margin-top: 50px;
+
+  @include max(1240) {
+    display: flex;
   }
 }
 
 .header-menu__lang {
   display: none;
+  margin-top: 20px;
 
-  @include max(1600) {
+  @include max(1240) {
     display: flex;
   }
-  span {
-    font-size: 26px;
-    font-weight: 400;
-    padding: 0 3px;
-  }
 }
-
-.header-menu-btn {
-  display: none;
-  height: 39px;
-  margin: 55px 0 24px 0;
-  text-decoration: none;
-
-  @include max(1600) {
-    display: flex;
-  }
-  &:hover {
-    span {
-      background-color: darken($highlight, 15%);
-    }
-    svg {
-      fill: darken($highlight, 15%);
-    }
-  }
-  span {
-    font-weight: 400;
-    line-height: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 39px;
-    padding: 17px 20px 15px 20px;
-    transition: .5s;
-    text-align: center;
-    white-space: nowrap;
-    text-transform: uppercase;
-    color: #fff;
-    background-color: $highlight;
-
-    @include responsive-font(22, 18);
-  }
-}
-
-.header-menu-btn__svg {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex: none;
-  width: 30px;
-  height: 39px;
-  background-color: #fff;
-  svg {
-    fill: $highlight;
-    width: 15px;
-    height: 15px;
-    transition: .5s;
-  }
-}
-
-.header-menu__lang-link {
-  font-size: 26px;
-  font-weight: 400;
-  color: #fff;
-  &.active {
-    font-weight: 600;
-    color: $highlight;
-  }
-}
-
 //end #MENU
 
 //begin #BUTTON
-.header-btn {
+.header__btn {
   display: flex;
-  flex: none;
-  height: 56px;
   margin-left: 20px;
+}
+
+.header-btn {
+  flex: none;
   text-decoration: none;
 
-  @include max(1600) {
-    margin-left: 0;
-  }
-  @include max(900) {
-    height: 40px;
-  }
-  @include max(640) {
-    height: 25px;
-  }
   &:hover {
     span {
       background-color: darken($highlight, 15%);
@@ -226,30 +163,20 @@
     }
   }
   span {
-    font-size: 26px;
-    font-weight: 400;
+    font-size: 18px;
+    font-weight: 500;
     line-height: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 56px;
-    padding: 17px 20px 15px 20px;
+    height: 40px;
+    padding: 0 20px 0 20px;
     transition: .5s;
     text-align: center;
     white-space: nowrap;
     text-transform: uppercase;
     color: #fff;
     background-color: $highlight;
-
-    @include max(900) {
-      font-size: 18px;
-      height: 40px;
-    }
-    @include max(640) {
-      font-size: 12px;
-      height: 25px;
-      padding: 3px 9px;
-    }
   }
 }
 
@@ -258,31 +185,39 @@
   justify-content: center;
   align-items: center;
   flex: none;
-  width: 42px;
-  height: 56px;
+  width: 30px;
+  height: 40px;
   background-color: #fff;
 
-  @include max(900) {
-    width: 30px;
-    height: 40px;
-  }
-  @include max(640) {
-    width: 25px;
-    height: 25px;
-  }
   svg {
     fill: $highlight;
-    width: 22px;
-    height: 23px;
+    width: 15px;
+    height: 15px;
     transition: .5s;
+  }
+}
 
-    @include max(900) {
-      width: 15px;
-      height: 15px;
-    }
+.header__btn {
+  @include max(425) {
+    margin-left: 0;
+  }
+  span {
     @include max(640) {
-      width: 10px;
-      height: 10px;
+      font-size: 12px;
+      height: 25px;
+      padding: 2px 9px 0 9px;
+    }
+  }
+  .header-btn__svg {
+    @include max(640) {
+      width: 25px;
+      height: 25px;
+    }
+    svg {
+      @include max(640) {
+        width: 10px;
+        height: 10px;
+      }
     }
   }
 }
@@ -299,7 +234,7 @@
   height: 32px;
   margin-left: 20px;
 
-  @include max(1600) {
+  @include max(1240) {
     display: flex;
   }
   svg {
