did search page

--- a/src/pug/pages/search.pug
+++ b/src/pug/pages/search.pug
@@ -90,6 +90,12 @@ block content
           +clinic-card('Назва кліники довга')
           +clinic-card('Назва кліники')
           +clinic-card('Назва кліники')
+          +clinic-card('Назва кліники')
+          +clinic-card('Назва кліники довга')
+          +clinic-card('Назва кліники')
+          +clinic-card('Назва кліники довга')
+          +clinic-card('Назва кліники')
+          +clinic-card('Назва кліники')
         //end search__clinics
     //end content
 
