--- a/src/style/pages/_search.scss
+++ b/src/style/pages/_search.scss
@@ -55,16 +55,17 @@
   background-color: $highlight;
   svg {
     fill: #fff;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
   }
 }
 
 .search-clinics {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
+  width: calc(100% + 30px);
   margin-bottom: 50px;
+  margin-left: -15px;
 }
 
 //begin #CLINIC ITEM
@@ -72,15 +73,15 @@
   display: flex !important;
   flex-direction: column;
   align-items: center;
-  width: calc(33.33% - 15px);
-  margin-bottom: 30px;
+  width: calc(33.33% - 30px);
+  margin: 0 15px 30px 15px;
   border: 1px solid $highlight;
 
   @include max(1023) {
-    width: calc(50% - 15px);
+    width: calc(50% - 30px);
   }
   @include max(640) {
-    width: 100%;
+    width: calc(100% - 30px);
   }
 }
 
@@ -95,7 +96,8 @@
 .search-clinic__logo {
   display: flex;
   justify-content: center;
-  width: 85px;
+  width: 100%;
+  max-width: 85px;
   margin-bottom: 15px;
   border-bottom: 1px solid #fff;
   img {
