did implants page

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -7,6 +7,7 @@
 //elements
 @import 'elements/slickBase';
 @import 'elements/language';
+@import 'elements/docs-slider';
 //@import 'elements/breadcrumbs';
 //@import 'elements/burger';
 //@import 'elements/pagination';
@@ -19,3 +20,4 @@
 //pages
 @import 'pages/index';
 @import 'pages/search';
+@import 'pages/implants';
