--- a/src/style/pages/_index.scss
+++ b/src/style/pages/_index.scss
@@ -1,11 +1,6 @@
 .index {
-  .header {
-    position: absolute;
-    z-index: 10;
-    top: 0;
-    right: 0;
-    left: 0;
-    width: 100%;
+  &.main {
+    padding-top: 0;
   }
 }
 
