--- a/src/style/sections/_header.scss
+++ b/src/style/sections/_header.scss
@@ -1,4 +1,10 @@
 .header {
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
   .container {
     display: flex;
     justify-content: space-between;
