--- a/src/style/pages/_implants.scss
+++ b/src/style/pages/_implants.scss
@@ -1,21 +1,29 @@
 .implants-row {
   margin-bottom: 80px;
 }
+
 .implants-row__title {
   margin-bottom: 40px;
+
+  @include max(767) {
+    text-align: center;
+  }
 }
 
 //begin #OPTIONS
 .implants-options {
   display: flex;
   justify-content: space-between;
+
   @include max(767) {
     flex-wrap: wrap;
   }
 }
+
 .implants-options__item {
   width: calc(33.33% - 10px);
   text-decoration: none;
+
   @include max(767) {
     width: 100%;
     margin-bottom: 20px;
@@ -28,13 +36,14 @@
       font-weight: 700;
       &::before {
         border-top: 1px solid $highlight;
-        border-bottom: 1px solid $highlight;
         border-top: 1px solid $highlight;
+        border-bottom: 1px solid $highlight;
         border-bottom: 1px solid $highlight;
       }
     }
   }
 }
+
 .implants-options__item-pic {
   margin-bottom: 25px;
   transition: .5s;
@@ -45,6 +54,7 @@
     border: 1px solid $highlight;
   }
 }
+
 .implants-options__item-title {
   font-size: 24px;
   font-weight: 300;
@@ -52,28 +62,122 @@
   padding-top: 10px;
   transition: .5s;
   color: #fff;
+
   @include max(1024) {
     font-size: 20px;
   }
   @include max(767) {
-    text-align: center;
     font-weight: 500;
+    text-align: center;
   }
   &::before {
     position: absolute;
     top: 0;
     left: 0;
-    transition: .5s;
     width: 46px;
     height: 3px;
     content: '';
+    transition: .5s;
     border-top: 1px solid #000;
     border-bottom: 1px solid #000;
     background-color: $highlight;
+
     @include max(767) {
       right: 0;
       margin: auto;
     }
   }
 }
+
 //end #OPTIONS
+
+//begin #PERSON
+.implants-person {
+  display: flex;
+
+  @include max(767) {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.implants-person__pic {
+  position: relative;
+  flex: none;
+  width: 100%;
+  max-width: 300px;
+  border: 1px solid $highlight;
+
+  @include max(767) {
+    margin-bottom: 30px;
+  }
+  img {
+    display: block;
+    width: 100%;
+  }
+}
+
+.implants-person__pic-text {
+  position: absolute;
+  z-index: 1;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 80px;
+  padding: 5px 10px;
+  text-align: center;
+  background-color: rgba(178, 210, 53, .8);
+  span {
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: uppercase;
+  }
+}
+
+.implants-person__info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 60px;
+
+  @include max(767) {
+    align-items: center;
+    padding-left: 0;
+  }
+  .btn-transparent {
+    margin-top: auto;
+  }
+}
+
+.implants-person__info-list {
+  margin: 0 0 20px 0;
+  padding: 0;
+}
+
+.implants-person__info-item {
+  list-style: none;
+
+  @include max(767) {
+    text-align: center;
+  }
+  p {
+    font-weight: 300;
+    position: relative;
+    display: block;
+    &::before {
+      display: inline-block;
+      width: 10px;
+      height: 3px;
+      margin-right: 8px;
+      margin-bottom: 5px;
+      content: '';
+      background-color: $highlight;
+    }
+  }
+}
+
+//end #PERSON
