--- a/src/pug/pages/implant.pug
+++ b/src/pug/pages/implant.pug
@@ -50,6 +50,8 @@ block content
           h2.title.implants-row__title Що потрібно знати пацієнту
           include ../elements/docs-slider
         //end implants-row
+
+        include ../sections/desktop-hidden
     //end content
 
     include ../sections/footer
