--- a/src/pug/pages/implants.pug
+++ b/src/pug/pages/implants.pug
@@ -50,6 +50,8 @@ block content
           //end implants-options
         //end implants-row
 
+        include ../sections/desktop-hidden
+
     //end content
 
     include ../sections/footer
