--- a/src/style/pages/_prices.scss
+++ b/src/style/pages/_prices.scss
@@ -1,3 +1,11 @@
+.prices-row {
+  margin-bottom: 80px;
+
+  @include max(767) {
+    margin-bottom: 40px;
+  }
+}
+
 .prices-row__title {
   margin-bottom: 40px;
 
