--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -8,6 +8,7 @@
 @import 'elements/slickBase';
 @import 'elements/language';
 @import 'elements/docs-slider';
+@import 'elements/video-slider';
 //@import 'elements/breadcrumbs';
 //@import 'elements/burger';
 //@import 'elements/pagination';
@@ -22,3 +23,4 @@
 @import 'pages/search';
 @import 'pages/implants';
 @import 'pages/prices';
+@import 'pages/info';
