--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,5 +1,4 @@
 // core
-//@import 'core/fonts';
 @import 'core/variables';
 @import 'core/mixins';
 @import 'core/base';
@@ -9,10 +8,7 @@
 @import 'elements/language';
 @import 'elements/docs-slider';
 @import 'elements/video-slider';
-//@import 'elements/breadcrumbs';
-//@import 'elements/burger';
-//@import 'elements/pagination';
-//@import 'elements/popup';
+@import 'elements/reviews-slider';
 
 //section
 @import 'sections/header';
@@ -24,3 +20,4 @@
 @import 'pages/implants';
 @import 'pages/prices';
 @import 'pages/info';
+@import 'pages/map';
