--- a/src/pug/elements/video-slider.pug
+++ b/src/pug/elements/video-slider.pug
@@ -6,7 +6,7 @@ mixin video-slide(text)
         img(src="assets/img/logo.svg" alt="logo")
 
       a(data-fancybox="" href="https://www.youtube.com/watch?v=KoezqT2rknI").btn-transparent
-        span Дивитися
+        span Дивитись
         .btn-transparent__icon.btn-transparent__icon--video
           +svg('video')
 
