--- a/src/pug/pages/inner.pug
+++ b/src/pug/pages/inner.pug
@@ -52,7 +52,7 @@ block content
             blockquote.inner-row__blockquote "Надежный выбор, цитата - решение на всю жизнь и тд. Конечно, только звук заголовки не создают доверия для пометов, поэтому они ищут информация и копается в фактах, которые лежат в основе этих фраз. Активный интерес к свойствам имплантатов радует, потому что конкретные факты помогают пациентам делать правильные решения. Почему именно импланты Straumann выбора врачей и пациентов нет. 1 в мире?"
             .inner-row__btn
               a(href="#").btn-transparent
-                span Знайти клініку
+                span Про Straumann
                 .btn-transparent__icon
                   +svg('arr-right')
         //end inner-row
