--- a/src/style/pages/_inner.scss
+++ b/src/style/pages/_inner.scss
@@ -89,9 +89,11 @@
 
 .inner-row__50 {
   width: calc(50% - 10px);
+  padding-right: 10px;
 
   @include max(767) {
     width: 100%;
+    padding-right: 0;
   }
 }
 
