--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -51,10 +51,10 @@ block content
               li.index-slide-02__item
                 h3.subtitle.index-slide-02__item-title Легендарна швейцарська якість
                 p Зубні імплантати  виробляються у Швеції на базі наукової співпраці з більш ніж <strong><i class='highlight-text'>150 університетів</i></strong>
-              li.index-slide-02__item
+              //-li.index-slide-02__item
                 h3.subtitle.index-slide-02__item-title Світовий лідер в Україні
                 p Зубні імплантати Straumann  займають <strong><i class='highlight-text'>25%</i></strong> світового ринку та <strong><i class='highlight-text'>35%</i></strong> українського ринку  імплантатів
-              li.index-slide-02__item
+              //-li.index-slide-02__item
                 h3.subtitle.index-slide-02__item-title Легендарна швейцарська якість
                 p Зубні імплантати  виробляються у Швеції на базі наукової співпраці з більш ніж <strong><i class='highlight-text'>150 університетів</i></strong>
             //end index-slide-02__items
@@ -75,14 +75,14 @@ block content
               p <strong><i class='highlight-text'>Імплантація</i></strong> – це процес відновлення втраченого зуба, що складається з двох етапів: хірургічного (приживлення імплантату) та і ортопедичного (виготовлення і встановлення коронки)
               .index-slide-03__images
                 //begin index-slide-03__img
-                .index-slide-03__img
+                a(href="#").index-slide-03__img
                   img(src="assets/img/slide-03-img-02.jpg" alt="picture")
-                  a(href="#").index-slide-03__img-btn Імплантація зубів
+                  .index-slide-03__img-btn Імплантація зубів
                 //end index-slide-03__img
                 //begin index-slide-03__img
-                .index-slide-03__img
+                a(href="#").index-slide-03__img
                   img(src="assets/img/slide-03-img-01.jpg" alt="picture")
-                  a(href="#").index-slide-03__img-btn Імплантація зубів
+                  .index-slide-03__img-btn Імплантація зубів
                 //end index-slide-03__img
               .index-slide-03__footer
                 a(href="#").btn-transparent
