--- a/src/pug/pages/search.pug
+++ b/src/pug/pages/search.pug
@@ -5,21 +5,21 @@ mixin clinic-card(title)
   .search-clinic
     //begin search-clinic__header
     .search-clinic__header
-      .search-clinic__logo
+      //-.search-clinic__logo
         img(src="assets/img/search-logo.png" alt="picture")
       .search-clinic__title
         span #{title}
     //end search-clinic__header
 
-    //begin search-clinic__slider
-    .search-clinic__slider
+    //-begin search-clinic__slider
+    //-.search-clinic__slider
       .search-clinic__slider-img
         img(src="assets/img/search-01.jpg" alt="picture")
       .search-clinic__slider-img
         img(src="assets/img/search-02.jpg" alt="picture")
       .search-clinic__slider-img
         img(src="assets/img/search-03.jpg" alt="picture")
-    //end search-clinic__slider
+    //-end search-clinic__slider
 
     //begin search-clinic__info
     .search-clinic__info
