--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -1,7 +1,7 @@
 //begin header
 header.header
   .container
-    a(href="#").header__logo
+    a(href="/").header__logo
       img(src="assets/img/logo.svg" alt="logo")
 
     //begin header__menu
