--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -215,3 +215,22 @@ svg {
     display: none;
   }
 }
+
+.desktop-visible{
+  .index-slide-04 {
+    background-image: url('../img/slide-04-v2.jpg');
+    @include max(767) {
+      background-image: url('../img/bg-slide-04.jpg');
+      background-position: 50% 100%;
+      width: calc(100% + 60px);
+      margin-left: -30px;
+    }
+    .container{
+      min-height: 0;
+      padding-top: 0;
+    }
+  }
+  .language {
+    display: none;
+  }
+}
