--- a/src/style/pages/_index.scss
+++ b/src/style/pages/_index.scss
@@ -188,10 +188,6 @@
 .index-slide-02 {
   @include max(767) {
     border-bottom: 1px solid $highlight;
-    background-image: url('../img/bg-slide-02.jpg');
-    background-repeat: no-repeat;
-    background-position: 100% 50%;
-    background-size: cover;
   }
   .container {
     display: flex;
@@ -309,7 +305,6 @@
     &::before {
       display: none;
     }
-    //padding: 20px 0 0 40px;
   }
 }
 
@@ -394,11 +389,18 @@
   position: relative;
   width: calc(50% - 10px);
   min-height: 212px;
+  &:hover {
+    img {
+      filter: grayscale(100%);
+      -webkit-filter: grayscale(100%);
+    }
+  }
 
   img {
     display: block;
     width: 100%;
     height: 100%;
+    transition: .5s;
 
     object-fit: cover;
     object-position: 50% 50%;
