bugfix lang element from index.html

--- a/src/style/pages/_index.scss
+++ b/src/style/pages/_index.scss
@@ -20,9 +20,9 @@
     display: flex !important;
   }
   .slick-dots {
-    top: 0;
+    top: 100px;
     right: 0;
-    bottom: 0;
+    bottom: 100px;
     left: 0;
     display: flex;
     flex-direction: column;
